--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "NikV",
-    "repositoryName": "NikV.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"NikV","repositoryName":"NikV.github.io","branch":"master"},"site":{"title":"Site","description":"Site","url":"http://NikV.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"http://NikV.github.io/themes/Casper"}}
