--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"NikV","repositoryName":"NikV.github.io","branch":"master"},"site":{"title":"NikV's Interesting Site...","description":"Kinda interesting...","url":"http://NikV.github.io"},"socialnetwork":{},"theme":{"name":"Saga","url":"http://NikV.github.io/themes/Saga"}}
+{"meta":{"username":"NikV","repositoryName":"NikV.github.io","branch":"master"},"site":{"title":"NikV's Interesting Site...","description":"Kinda interesting...","postsPerPage":"10","url":"http://NikV.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"http://NikV.github.io/themes/Casper"}}
